match3/src/snapshots/match3__tests__wildcard__horizontal.txt.snap
---
source: match3/src/tests.rs
expression: "variants[0].1"
---
Should match wildcard - horizontal
Board: 
╭───╮
│r**│
╰───╯
Match #0 - r:
╭───╮
│r**│
╰───╯
Remaining cells:
╭───╮
│   │
╰───╯
