match3/src/snapshots/match3__tests__wildcard__merge_groups.txt.snap
---
source: match3/src/tests.rs
expression: "variants[0].1"
---
Should merge wildcard groups
Board: 
╭───╮
│r**│
│--*│
│--r│
╰───╯
Match #0 - r:
╭───╮
│r**│
│  *│
│  r│
╰───╯
Remaining cells:
╭───╮
│   │
│-- │
│-- │
╰───╯
