match3/src/snapshots/match3__tests__wildcard__no_standalone.txt.snap
---
source: match3/src/tests.rs
expression: "variants[0].1"
---
Should not match wildcards only
Board: 
╭───╮
│***│
╰───╯
No matches
