match3/src/snapshots/match3__tests__wildcard__overflow_failcase.txt.snap
---
source: match3/src/tests.rs
expression: "variants[0].1"
---
Should not cause overflow
Board: 
╭────╮
│bbb-│
│--b-│
│w**b│
│-bbb│
│-bbb│
╰────╯
Match #0 - b:
╭────╮
│bbb │
│  b │
│ **b│
│ bbb│
│ bbb│
╰────╯
Match #1 - w:
╭────╮
│    │
│    │
│w** │
│    │
│    │
╰────╯
Remaining cells:
╭────╮
│   -│
│-- -│
│    │
│-   │
│-   │
╰────╯
