match3/src/snapshots/match3__tests__wildcard__vertical.txt.snap
---
source: match3/src/tests.rs
expression: "variants[0].1"
---
Should match wildcard - vertical
Board: 
╭─╮
│r│
│*│
│*│
╰─╯
Match #0 - r:
╭─╮
│r│
│*│
│*│
╰─╯
Remaining cells:
╭─╮
│ │
│ │
│ │
╰─╯
